# p4ttch-p4-todo-app

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: database.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  Header.svelte
src/routes/todo/: +page.svelte
